sm8250-common: parts: Improve thermal settings appearance
Change-Id: I831738893aeb870079789229aedb94d3d5c03f44

Revert "sm8250-common: parts: Use S theme in thermal settings"

This reverts commit f04073c55bc16b8a00e8835c80a9d715c5738c5b.

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -77,9 +77,7 @@
 
         <activity
             android:name=".thermal.ThermalActivity"
-            android:label="@string/thermal_title"
-            android:exported="true"
-            android:theme="@style/Theme.SubSettingsBase_v31">
+            android:label="@string/thermal_title">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
