--- a/rootdir/etc/init.xiaomi.rc
+++ b/rootdir/etc/init.xiaomi.rc
@@ -82,3 +82,9 @@ service vendor.btmac-sh /vendor/bin/init.mi.btmac.sh
     group system bluetooth wifi
     oneshot
     disabled
+
+# Fast Charge
+on boot
+    chown system system /sys/class/qcom-battery/restrict_chg
+    chmod 0666 /sys/class/qcom-battery/restrict_chg
+    
