--- a/rootdir/etc/init.xiaomi.rc
+++ b/rootdir/etc/init.xiaomi.rc
@@ -87,4 +87,5 @@ service vendor.btmac-sh /vendor/bin/init.mi.btmac.sh
 on boot
     chown system system /sys/class/qcom-battery/restrict_chg
     chmod 0666 /sys/class/qcom-battery/restrict_chg
-    
+    chown system system /sys/class/qcom-battery/restrict_cur
+    chmod 0666 /sys/class/qcom-battery/restrict_cur
